secure-gate-access/infrastructure/aws/cloudformation/security-groups.yml
AWSTemplateFormatVersion: '2010-09-09'
Description: Security group baseline for ALB, app, database, and Redis.

Parameters:
  VpcId:
    Type: AWS::EC2::VPC::Id
  AppPort:
    Type: Number
    Default: 5000
  DbPort:
    Type: Number
    Default: 5432
  RedisPort:
    Type: Number
    Default: 6379

Resources:
  AlbSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow HTTPS ingress to ALB
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - IpProtocol: tcp
          FromPort: !Ref AppPort
          ToPort: !Ref AppPort
          DestinationSecurityGroupId: !Ref AppSecurityGroup

  AppSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow app ingress from ALB and egress to DB/Redis/HTTPS
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: !Ref AppPort
          ToPort: !Ref AppPort
          SourceSecurityGroupId: !Ref AlbSecurityGroup
      SecurityGroupEgress:
        - IpProtocol: tcp
          FromPort: !Ref DbPort
          ToPort: !Ref DbPort
          DestinationSecurityGroupId: !Ref DbSecurityGroup
        - IpProtocol: tcp
          FromPort: !Ref RedisPort
          ToPort: !Ref RedisPort
          DestinationSecurityGroupId: !Ref RedisSecurityGroup
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0

  DbSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Restrict DB ingress to app SG
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: !Ref DbPort
          ToPort: !Ref DbPort
          SourceSecurityGroupId: !Ref AppSecurityGroup
      SecurityGroupEgress: []

  RedisSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Restrict Redis ingress to app SG
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: !Ref RedisPort
          ToPort: !Ref RedisPort
          SourceSecurityGroupId: !Ref AppSecurityGroup
      SecurityGroupEgress: []

Outputs:
  AlbSecurityGroupId:
    Value: !Ref AlbSecurityGroup
  AppSecurityGroupId:
    Value: !Ref AppSecurityGroup
  DbSecurityGroupId:
    Value: !Ref DbSecurityGroup
  RedisSecurityGroupId:
    Value: !Ref RedisSecurityGroup
